fix custom scrollbar

--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -43,19 +43,33 @@ select:-webkit-autofill:focus {
     border: none;
     border-bottom: 1px solid #fff;
 
+    @include onTablet {
+      height: 88px;
+      padding-top: 48px;
+    }
+
     &::placeholder {
       opacity: 0.7;
+    }
+
+    &::-webkit-scrollbar {
+      width: 20px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: inherit;
+      box-shadow: inset 0 0 2px $accent-color;
+      border-radius: 10px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: $accent-color;
+      border-radius: 10px;
     }
 
     &:focus {
       opacity: 1;
       border-bottom: 1px solid $accent-color;
-
-    }
-
-    @include onTablet {
-      height: 88px;
-      padding-top: 48px;
     }
   }
 
@@ -64,7 +78,6 @@ select:-webkit-autofill:focus {
 
     @include onTablet {
       margin-top: 80px;
-
     }
   }
 }
